infra/k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-app
          image: 'rsintellias/api:0.0.3'
          ports:
          - containerPort: 3000
            name: http-api-svc
---
kind: Service
apiVersion: v1
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: http-api-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: auth
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth-app
          image: 'rsintellias/auth:0.0.1'
          ports:
          - containerPort: 3001
            name: http-auth-svc
---
kind: Service
apiVersion: v1
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports:
    - port: 8080
      targetPort: http-auth-svc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traning-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: api-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /auth
            backend:
              service: 
                name: auth-service
                port:
                  number: 8080
---
